Fix Webp support and file preview icon alignment

--- a/client/src/styles/Asset.scss
+++ b/client/src/styles/Asset.scss
@@ -194,9 +194,10 @@
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
+    display: flex !important;
     align-items: center;
     justify-content: center;
+    
     .asset-item-icon {
         color: $text-color-secondary;
     }
